Update exception handling & logging.